cmake_minimum_required(VERSION 3.29.2)
project(Adv_Prog)

set(CMAKE_CXX_STANDARD 20)

add_executable(Adv_Prog
        #ptr.cpp
        #Ext/HanoiTower.cpp
        #Ext/WoodChooper.cpp
        #Func/bt.cpp
        #Ptr/bt.cpp
        Ptr/btconst.cpp
        hkr.cpp
        #ArrNStr/BT1.cpp
        #ArrNStr/BT2.cpp
        #ArrNStr/BT3.cpp
        #ArrNStr/BT4.cpp
        #ArrNStr/BT5.cpp
        #ArrNStr/BT5VT.cpp
        #ArrNStr/BT6.cpp
        #Ext/TruyXuatMang.cpp
        #Ext/BobaBang0.cpp
        #Ext/SoDinh.cpp
        #Ext/HCNvuamanhinh.cpp
        #Ext/TimSo.cpp
)
